# scion-privacy-proxy

./: .gitignore  README.md  go.mod  go.sum  go_deps.bzl  temp.txt
4sp/: 4sp_setup.sh
go/pkg/gateway/: gateway.go  pathmonitor.go
go/pkg/gateway/config/: config.go
go/pkg/gateway/control/: engine.go
go/pkg/gateway/control/mock_control/: mock.go
go/pkg/gateway/dataplane/: BUILD.bazel  decoder.go  encoder.go  encoder_test.go  encryption.go  framebuf.go  framebufgroup.go  ingressserver.go  privacyproxy_test.go  rlist.go  sender.go  sender_test.go  session.go  session_test.go  shamir.go  sharebuf.go  sharebufgroup.go  worker.go  worker_test.go
go/pkg/gateway/pathhealth/: BUILD.bazel  dijkstra.go  graphbuilder.go  graphbuilder_test.go  pathwatcher.go  selector.go
go/posix-gateway/: main.go
scproxy/setupA/: sig.json  sig.toml
scproxy/setupB/: sig.json  sig.toml
